Солнышко Ксения, ИТМО ФИТиП, M3332, Expiration (#300)
Co-authored-by: Vadim Tsesko <incubos@users.noreply.github.com>
Co-authored-by: Alexey Shik <58121508+AlexeyShik@users.noreply.github.com>